# kugelaudio-rs

./: .gitignore  Cargo.toml  README.md
convert/: convert_voices.py
src/: config.rs  error.rs  lib.rs  main.rs
src/audio/: wav.rs
src/generation/: pipeline.rs
src/model/: acoustic_decoder.rs  causal_conv.rs  connector.rs  diffusion_head.rs  lm.rs  mod.rs  quantized_qwen2.rs  qwen2.rs  weights.rs
src/schedule/: dpm_solver.rs  mod.rs
src/server/: http.rs  mod.rs  protocol.rs  server_loop.rs  unix.rs
