[package]
name = "kugelaudio-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
description = "KugelAudio TTS inference on Apple Silicon with MLX"
license = "MIT"

[dependencies]
# MLX backend + Qwen2 model (all from OminiX-MLX monorepo, pinned to v1.0.0)
mlx-rs = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", rev = "48b3fd8", features = ["metal", "accelerate"] }
mlx-sys = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", rev = "48b3fd8" }
mlx-rs-core = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", rev = "48b3fd8" }
qwen3-mlx = { git = "https://github.com/OminiX-ai/OminiX-MLX.git", rev = "48b3fd8" }

# Tokenization
tokenizers = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio output
hound = "3.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Numeric types
half = "2"
