[package]
name = "kugelaudio-rs"
version = "0.2.1"
edition = "2024"
rust-version = "1.85.0"
description = "KugelAudio TTS inference — Metal, CUDA, and CPU via candle"
license = "MIT"

[dependencies]
# ML backend (candle by HuggingFace)
candle-core = "0.9"
candle-nn = "0.9"

# Tokenization
tokenizers = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio output
hound = "3.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Numeric types
half = "2"
# Explicit dependency for GGUF binary parsing (also used transitively by candle)
byteorder = "1"

# Server mode
tiny_http = "0.12"

# Progress bar (used by convert_gguf binary)
indicatif = "0.17"

[[bin]]
name = "convert_gguf"
path = "src/bin/convert_gguf.rs"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
